objects/project_cloud__Time_Entry__c.object
<CustomObject>
    <description>Individual time entries of users in your system</description>
    <fields>
        <fullName>project_cloud__ActivityId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Lookup relationships against activities (tasks and events) don&apos;t exist.
A reference to the allocation that spawned this Time Entry is required to adjust the time entry when the allocation is modified</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
        <label>Deprecated (ActivityId)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>project_cloud__Completed__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Estimation by the user about how much of the task has been completed. I.e the total progress of the task</description>
        <inlineHelpText>The total estimated progress as a percentage after this time has been invested</inlineHelpText>
        <label>Completed Estimation</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>project_cloud__Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date the Time Entry represents. There is a validation rule that restricts the Date value that can be entered so the Time Entry falls inside the bounds of the Timesheet</description>
        <inlineHelpText>The date the Time Entry represents</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours__c</fullName>
        <defaultValue>null</defaultValue>
        <description>How many hours the Project Task was worked on</description>
        <inlineHelpText>Ensure that when entering values. The number is divisible by 0.25 making the hours entered 15 minute blocks. e.g 1.75 is 1 hour 45 minutes</inlineHelpText>
        <label>Hours</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issue</label>
        <referenceTo>project_cloud__Issue__c</referenceTo>
        <relationshipLabel>Deprecated(Time Entries)</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Task__c</fullName>
        <description>The Project Task the Time Entry is for</description>
        <inlineHelpText>The Project Task the Time Entry is for</inlineHelpText>
        <label>Project Task</label>
        <referenceTo>project_cloud__Project_Task__c</referenceTo>
        <relationshipLabel>Deprecated(Time Entries)</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>project_cloud__Timesheet__c</fullName>
        <description>The Timesheet the Time Entry is part of. There is a validation rule that restricts the Date value that can be entered so the Time Entry falls inside the bounds of the Timesheet</description>
        <inlineHelpText>The Timesheet the Time Entry is part of</inlineHelpText>
        <label>Timesheet</label>
        <referenceTo>project_cloud__Timesheet__c</referenceTo>
        <relationshipLabel>Deprecated(Time Entries)</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Deprecated (Time Entry)</label>
    <nameField>
        <displayFormat>TE-{0000000000}</displayFormat>
        <label>Time Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deprecated (Time Entries)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>project_cloud__Completed_Estimation_is_between_0_100</fullName>
        <active>false</active>
        <description>Make sure the Estimation percentage is between 0 and 100</description>
        <errorConditionFormula>project_cloud__Completed__c &lt; 0 || project_cloud__Completed__c &gt; 100</errorConditionFormula>
        <errorDisplayField>project_cloud__Completed__c</errorDisplayField>
        <errorMessage>Value must be between 0 and 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Date_is_within_Timesheet_Range</fullName>
        <active>false</active>
        <description>Make sure the Date field on the Timesheet entry is within the Start and End Date on the Timesheet</description>
        <errorConditionFormula>project_cloud__Date__c &lt; project_cloud__Timesheet__r.project_cloud__Start__c || project_cloud__Date__c &gt; project_cloud__Timesheet__r.project_cloud__End__c</errorConditionFormula>
        <errorDisplayField>project_cloud__Date__c</errorDisplayField>
        <errorMessage>The Date entered is not within the range of the timesheet</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Ensure_Timesheet_Owner_is_User</fullName>
        <active>false</active>
        <description>Make sure that the owner of the Timesheet selected is the user creating the entry unless the Profile of the User is a project manager</description>
        <errorConditionFormula>$User.Id != project_cloud__Timesheet__r.OwnerId &amp;&amp; $Profile.Name != &apos;Project Manager&apos; &amp;&amp; $Profile.Name != &apos;System Administrator&apos;</errorConditionFormula>
        <errorDisplayField>project_cloud__Timesheet__c</errorDisplayField>
        <errorMessage>Time entries cannot be added to a timesheet that is not your own</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Hour_Valid_Blocks</fullName>
        <active>false</active>
        <description>Ensure that the hours entered are a multiple of Custom Setting Working_Hours.Units value. This ensures time is entered in valid time unit blocks</description>
        <errorConditionFormula>project_cloud__Hours__c &lt;= 0 || project_cloud__Hours__c &gt;= 24</errorConditionFormula>
        <errorDisplayField>project_cloud__Hours__c</errorDisplayField>
        <errorMessage>Hours must be greater than 0 and less than 24 hours</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Hours_are_15_minute_blocks</fullName>
        <active>false</active>
        <description>This validation rule has been replaced by the Hours Valid blocks. Time is not entered in 15 minutes blocks but in multiples of the hours block value</description>
        <errorConditionFormula>MOD(project_cloud__Hours__c, 0.25) != 0</errorConditionFormula>
        <errorDisplayField>project_cloud__Hours__c</errorDisplayField>
        <errorMessage>Hours must be entered as 15 minute blocks</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Time_Entry_Deprecated</fullName>
        <active>true</active>
        <description>The Time Entry object has been deprecated, to create a time entry use the Work Object with Type &apos;Time Entry&apos;</description>
        <errorConditionFormula>ISNEW()</errorConditionFormula>
        <errorMessage>The Time Entry object has been deprecated, to create a Time Entry use the Work Object with Type &apos;Time Entry&apos;</errorMessage>
    </validationRules>
</CustomObject>